--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
+    "request": "^2.81.0",
     "reselect": "^3.0.1",
     "serve-favicon": "^2.4.4",
+    "socket.io": "^2.0.3",
     "socket.io-client": "^2.0.3",
     "socketio": "^1.0.0",
     "style-loader": "0.18.2",
