--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
+    "react-test-renderer": "^15.6.1",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-logger": "^3.0.6",
