--- a/.eslintrc
+++ b/.eslintrc
@@ -18,6 +18,7 @@
     "import/prefer-default-export": [0],
     "import/no-named-as-default": [0],
     "jsx-a11y/no-static-element-interactions": [0],
-    "jsx-a11y/href-no-hash": "off"
+    "jsx-a11y/href-no-hash": "off",
+    "react/prefer-stateless-function": "off",
   }
 }
