--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "classnames": "^2.2.5",
     "compression": "^1.7.0",
     "css-loader": "0.28.4",
+    "date-fns": "^1.28.5",
     "debug": "^3.0.1",
     "dotenv": "4.0.0",
     "eslint": "4.4.1",
