--- a/package.json
+++ b/package.json
@@ -55,7 +55,6 @@
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
     "react-router-dom": "^4.2.2",
     "react-test-renderer": "^15.6.1",
     "recompose": "^0.25.0",
@@ -63,6 +62,7 @@
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
+    "remarkable": "^1.7.1",
     "request": "^2.81.0",
     "reselect": "^3.0.1",
     "serve-favicon": "^2.4.4",
