--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "react-test-renderer": "^15.6.1",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
+    "redux-form": "^7.0.4",
     "redux-logger": "^3.0.6",
     "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
