--- a/package.json
+++ b/package.json
@@ -23,13 +23,15 @@
     "date-fns": "^1.28.5",
     "debug": "^3.0.1",
     "dotenv": "4.0.0",
-    "eslint": "4.4.1",
+    "eslint": "^4.7.1",
+    "eslint-config-prettier": "^2.5.0",
     "eslint-config-react-app": "^2.0.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^6.0.2",
     "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
     "evtx": "^0.3.2",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
@@ -76,19 +78,22 @@
     "sw-precache-webpack-plugin": "0.11.4",
     "uppercamelcase": "^3.0.0",
     "url-loader": "0.5.9",
-    "webpack": "^3.5.6",
-    "webpack-dev-server": "2.7.1",
-    "webpack-manifest-plugin": "1.2.1",
-    "whatwg-fetch": "2.0.3"
+    "webpack-manifest-plugin": "1.2.1"
   },
   "scripts": {
+    "precommit": "lint-staged",
+    "eslint-check":
+      "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
     "lint": "eslint src --color",
     "test": "NODE_ENV=test node scripts/test.js --env=jsdom",
     "start": "NODE_ENV=development node scripts/start.js",
     "build": "NODE_ENV=production node scripts/build.js",
-    "bundle:stats": "NODE_ENV=production webpack -p --config ./config/webpack.config.prod.js --profile --json > stats.json",
-    "bundle:analyse": "webpack-bundle-analyzer ./stats.json ./build --report --mode=static",
-    "srv:dev": "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --watch params --exec 'babel-node src/server'"
+    "bundle:stats":
+      "NODE_ENV=production webpack -p --config ./config/webpack.config.prod.js --profile --json > stats.json",
+    "bundle:analyse":
+      "webpack-bundle-analyzer ./stats.json ./build --report --mode=static",
+    "srv:dev":
+      "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --watch params --exec 'babel-node src/server'"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
@@ -99,34 +104,29 @@
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
     "enzyme": "^2.9.1",
-    "eslint-config-airbnb": "^15.1.0",
+    "eslint-plugin-prettier": "^2.3.1",
+    "husky": "^0.14.3",
+    "lint-staged": "^4.2.1",
     "nodemon": "^1.12.0",
+    "prettier": "^1.7.0",
     "should": "^13.0.1",
     "sinon": "^3.2.1",
-    "webpack-bundle-analyzer": "^2.9.0"
+    "webpack": "^3.5.6",
+    "webpack-bundle-analyzer": "^2.9.0",
+    "webpack-dev-server": "2.7.1"
+  },
+  "lint-staged": {
+    "*.{js,json,css}": ["prettier --write", "git add"]
   },
   "babel": {
-    "presets": [
-      "latest",
-      "stage-0",
-      "react"
-    ],
-    "plugins": [
-      "ramda",
-      "transform-decorators-legacy"
-    ]
+    "presets": ["latest", "stage-0", "react"],
+    "plugins": ["ramda", "transform-decorators-legacy"]
   },
   "jest": {
     "verbose": true,
-    "testPathIgnorePatterns": [
-      "utils"
-    ],
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
+    "testPathIgnorePatterns": ["utils"],
+    "collectCoverageFrom": ["src/**/*.{js,jsx}"],
+    "setupFiles": ["<rootDir>/config/polyfills.js"],
     "testMatch": [
       "<rootDir>/src/**/__tests__/**/*.js?(x)",
       "<rootDir>/src/**/?(*.)(spec|test).js?(x)"
@@ -138,22 +138,10 @@
       "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
       "^(?!.*\\.(js|jsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"
-    ],
+    "transformIgnorePatterns": ["[/\\\\]node_modules[/\\\\].+\\.(js|jsx)$"],
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node"
-    ]
-  },
-  "eslintConfig": {
-    "extends": "react-app"
+    "moduleFileExtensions": ["web.js", "js", "json", "web.jsx", "jsx", "node"]
   }
 }
