--- a/package.json
+++ b/package.json
@@ -23,15 +23,6 @@
     "date-fns": "^1.28.5",
     "debug": "^3.0.1",
     "dotenv": "4.0.0",
-    "eslint": "^4.7.1",
-    "eslint-config-prettier": "^2.5.0",
-    "eslint-config-react-app": "^2.0.0",
-    "eslint-loader": "1.9.0",
-    "eslint-plugin-flowtype": "2.35.0",
-    "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-react": "^7.3.0",
-    "eslint-plugin-standard": "^3.0.1",
     "evtx": "^0.3.2",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
@@ -86,7 +77,8 @@
     "eslint-check":
       "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
     "lint": "eslint src --color",
-    "test": "NODE_ENV=test node scripts/test.js --env=jsdom",
+    "wtest": "NODE_ENV=test node scripts/test.js --env=jsdom",
+    "test": "NODE_ENV=test jest",
     "start": "NODE_ENV=development node scripts/start.js",
     "build": "NODE_ENV=production node scripts/build.js",
     "bundle:stats":
@@ -97,6 +89,15 @@
       "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --watch params --exec 'babel-node src/server'"
   },
   "devDependencies": {
+    "eslint": "^4.7.1",
+    "eslint-config-prettier": "^2.5.0",
+    "eslint-config-react-app": "^2.0.0",
+    "eslint-loader": "1.9.0",
+    "eslint-plugin-flowtype": "2.35.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^6.0.2",
+    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-standard": "^3.0.1",
     "babel-cli": "^6.26.0",
     "babel-plugin-ramda": "^1.4.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
