--- a/.travis.yml
+++ b/.travis.yml
@@ -10,3 +10,4 @@ notifications:
     rooms: 
       redpelicans:xCuMR4Ld1A0cSDdgpgYtJvrW#schooljs
       redpelicans:xCuMR4Ld1A0cSDdgpgYtJvrW#ci
+services: mongodb
