--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "dependencies": {
     "@blueprintjs/core": "^1.27.0",
+    "@blueprintjs/datetime": "^1.22.0",
     "@blueprintjs/labs": "^0.8.0",
     "autoprefixer": "7.1.2",
     "babel-core": "6.25.0",
@@ -27,6 +28,7 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
     "file-loader": "0.11.2",
+    "formik": "^0.9.1",
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
