--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "react-dev-utils": "^4.0.1",
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
+    "react-intl": "^2.4.0",
     "react-masonry-layout": "^0.2.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
