--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react-dom": "^15.6.1",
     "react-google-login": "^2.9.3",
     "react-intl": "^2.4.0",
+    "react-markdown": "^2.5.0",
     "react-masonry-layout": "^0.2.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
