--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "joi": "^11.1.1",
     "moment": "^2.18.1",
     "mongobless": "^2.1.1",
     "mongodb": "^2.2.31",
@@ -117,7 +118,7 @@
     "husky": "^0.14.3",
     "lint-staged": "^4.2.1",
     "nodemon": "^1.12.0",
-    "prettier": "^1.7.0",
+    "prettier": "1.7.0",
     "should": "^13.0.1",
     "sinon": "^3.2.1",
     "webpack": "^3.5.6",
