--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@blueprintjs/datetime": "^1.22.0",
     "@blueprintjs/labs": "^0.8.0",
     "autoprefixer": "7.1.2",
+    "axios": "^0.16.2",
     "babel-core": "6.25.0",
     "babel-eslint": "7.2.3",
     "babel-jest": "20.0.3",
@@ -62,7 +63,6 @@
     "redux": "^3.7.2",
     "redux-form": "^7.0.4",
     "redux-logger": "^3.0.6",
-    "redux-mock-store": "^1.3.0",
     "redux-thunk": "^2.2.0",
     "remarkable": "^1.7.1",
     "request": "^2.81.0",
