--- a/package.json
+++ b/package.json
@@ -86,8 +86,8 @@
     "eslint-check":
       "eslint --print-config .eslintrc.json | eslint-config-prettier-check",
     "lint": "eslint src --color",
-    "wtest": "NODE_ENV=test node scripts/test.js --env=jsdom",
-    "test": "NODE_ENV=test jest --env=jsdom",
+    "wtest": "NODE_ENV=test node scripts/test.js --env=jsdom --runInBand",
+    "test": "NODE_ENV=test jest --env=jsdom --runInBand --forceExit",
     "start": "NODE_ENV=development node scripts/start.js",
     "build": "NODE_ENV=production node scripts/build.js",
     "bundle:stats":
