--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peep2",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "author": "redpelicans",
   "license": "MIT",
   "private": true,
@@ -33,6 +33,7 @@
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
+    "ignore-styles": "^5.0.1",
     "jest": "20.0.4",
     "joi": "^11.1.1",
     "mock-local-storage": "^1.0.5",
@@ -42,6 +43,8 @@
     "morgan": "^1.9.0",
     "morgan-debug": "^2.0.0",
     "njwt": "^0.4.0",
+    "nodemailer": "^4.3.0",
+    "nodemailer-mailgun-transport": "^1.3.5",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
