--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
       "webpack-bundle-analyzer ./stats.json ./build --report --mode=static",
     "srv:dev":
       "NODE_ENV=development DEBUG=peep*,evtx* nodemon --watch src/server --watch params --exec 'babel-node src/server'",
-    "srv:dist": "NODE_ENV=production babel src --out-dir dist/",
+    "srv:dist": "NODE_ENV=production babel src --copy-files --out-dir dist",
     "srv:run": "NODE_ENV=production DEBUG=peep*,evtx* node dist/server"
   },
   "devDependencies": {
