--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,17 @@
-# See https://help.github.com/ignore-files/ for more about ignoring files.
-
-# dependencies
-/node_modules
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# Don't check auto-generated stuff into git
+coverage
+build
+generated
+node_modules
+generated
+stats.json
+.env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+yarn-error.log
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+# Cruft
+.DS_Store
+npm-debug.log
+.idea
+jest.ide.config
+/dist
