--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "fs-extra": "3.0.1",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
+    "http-status": "^1.0.1",
     "ignore-styles": "^5.0.1",
     "jest": "20.0.4",
     "joi": "^11.1.1",
