--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "compression": "^1.7.0",
     "css-loader": "0.28.4",
     "date-fns": "^1.28.5",
-    "debug": "^3.0.1",
+    "debug": "^3.1.0",
     "dotenv": "^5.0.0",
     "evtx": "^0.3.3",
     "express": "^4.15.4",
@@ -34,7 +34,7 @@
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "ignore-styles": "^5.0.1",
-    "jest": "^22.2.0",
+    "jest": "21.1.0",
     "joi": "^13.1.2",
     "mock-local-storage": "^1.0.5",
     "moment": "^2.20.1",
@@ -106,11 +106,12 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-ramda": "^1.4.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
-    "enzyme": "^3.3.0",
+    "enzyme": "^3.2.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.17.0",
     "eslint-config-prettier": "^2.9.0",
@@ -123,13 +124,15 @@
     "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "jest-styled-components": "^4.10.0",
+    "jest-styled-components": "^4.11.0-1",
     "lint-staged": "^6.1.0",
     "nodemon": "^1.14.12",
     "prettier": "1.7.0",
+    "raf": "^3.4.0",
     "should": "^13.2.1",
     "sinon": "^5.0.0",
     "socket.io-mock": "^1.2.3",
+    "url-search-params-polyfill": "^2.0.3",
     "webpack": "^3.10.0",
     "webpack-bundle-analyzer": "^2.10.0",
     "webpack-dev-server": "2.7.1"
