--- a/package.json
+++ b/package.json
@@ -5,67 +5,67 @@
   "license": "MIT",
   "private": true,
   "dependencies": {
-    "@blueprintjs/core": "^1.27.0",
-    "@blueprintjs/datetime": "^1.22.0",
+    "@blueprintjs/core": "^1.35.3",
+    "@blueprintjs/datetime": "^1.25.3",
     "@blueprintjs/labs": "^0.8.0",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "babel-core": "6.25.0",
-    "babel-eslint": "7.2.3",
-    "babel-jest": "20.0.3",
+    "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.2.0",
     "babel-loader": "7.1.1",
-    "babel-preset-react-app": "^3.0.2",
+    "babel-preset-react-app": "^3.1.1",
     "babel-runtime": "6.26.0",
     "bricks.js": "^1.8.0",
     "case-sensitive-paths-webpack-plugin": "2.1.1",
-    "chalk": "1.1.3",
+    "chalk": "^2.3.0",
     "classnames": "^2.2.5",
     "compression": "^1.7.0",
     "css-loader": "0.28.4",
     "date-fns": "^1.28.5",
-    "debug": "^3.0.1",
-    "dotenv": "4.0.0",
-    "evtx": "^0.3.2",
+    "debug": "^3.1.0",
+    "dotenv": "^5.0.0",
+    "evtx": "^0.3.3",
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "3.0.0",
-    "file-loader": "0.11.2",
+    "file-loader": "^1.1.6",
     "formik": "^0.9.1",
-    "fs-extra": "3.0.1",
+    "fs-extra": "^5.0.0",
     "history": "^4.7.2",
     "html-webpack-plugin": "2.29.0",
     "ignore-styles": "^5.0.1",
-    "jest": "20.0.4",
-    "joi": "^11.1.1",
+    "jest": "21.1.0",
+    "joi": "^13.1.2",
     "mock-local-storage": "^1.0.5",
-    "moment": "^2.18.1",
+    "moment": "^2.20.1",
     "mongobless": "^2.1.1",
-    "mongodb": "^2.2.31",
+    "mongodb": "^3.0.2",
     "morgan": "^1.9.0",
     "morgan-debug": "^2.0.0",
     "njwt": "^0.4.0",
-    "nodemailer": "^4.3.0",
-    "nodemailer-mailgun-transport": "^1.3.5",
+    "nodemailer": "^4.4.2",
+    "nodemailer-mailgun-transport": "^1.3.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.6",
     "promise": "8.0.1",
     "prop-types": "^15.5.10",
     "ramda": "^0.24.1",
-    "react": "^15.6.1",
+    "react": "^16.2.0",
     "react-addons-css-transition-group": "^15.6.0",
-    "react-dev-utils": "^4.0.1",
-    "react-dom": "^15.6.1",
-    "react-google-login": "^2.9.3",
+    "react-dev-utils": "^5.0.0",
+    "react-dom": "^16.2.0",
+    "react-google-login": "^3.0.4",
     "react-intl": "^2.4.0",
-    "react-markdown": "^2.5.0",
+    "react-markdown": "^3.1.5",
     "react-masonry-layout": "^0.2.3",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "react-select": "^1.0.0-rc.10",
-    "react-test-renderer": "^16.0.0",
+    "react-select": "^1.2.1",
+    "react-test-renderer": "^16.2.0",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
-    "redux-form": "^7.0.4",
+    "redux-form": "^7.2.3",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
     "remarkable": "^1.7.1",
@@ -76,11 +76,11 @@
     "socket.io-client": "^2.0.3",
     "socketio": "^1.0.0",
     "style-loader": "0.18.2",
-    "styled-components": "^2.1.2",
+    "styled-components": "^3.1.6",
     "sw-precache-webpack-plugin": "0.11.4",
     "uppercamelcase": "^3.0.0",
     "url-loader": "0.5.9",
-    "uuid": "^3.1.0",
+    "uuid": "^3.2.1",
     "webpack-manifest-plugin": "1.2.1",
     "yup": "^0.22.0"
   },
@@ -106,31 +106,35 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-ramda": "^1.4.3",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-latest": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
     "chai": "^4.1.2",
-    "enzyme": "^2.9.1",
-    "eslint": "^4.7.1",
-    "eslint-config-prettier": "^2.5.0",
-    "eslint-config-react-app": "^2.0.0",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "^4.17.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-config-react-app": "^2.1.0",
     "eslint-loader": "1.9.0",
     "eslint-plugin-flowtype": "2.35.0",
     "eslint-plugin-import": "^2.7.0",
-    "eslint-plugin-jsx-a11y": "^6.0.2",
-    "eslint-plugin-prettier": "^2.3.1",
-    "eslint-plugin-react": "^7.3.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-prettier": "^2.6.0",
+    "eslint-plugin-react": "^7.6.1",
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
-    "jest-styled-components": "^4.7.0",
-    "lint-staged": "^4.2.1",
-    "nodemon": "^1.12.0",
+    "jest-styled-components": "^4.11.0-1",
+    "lint-staged": "^6.1.0",
+    "nodemon": "^1.14.12",
     "prettier": "1.7.0",
-    "should": "^13.0.1",
-    "sinon": "^3.2.1",
+    "raf": "^3.4.0",
+    "should": "^13.2.1",
+    "sinon": "^5.0.0",
     "socket.io-mock": "^1.2.3",
-    "webpack": "^3.5.6",
-    "webpack-bundle-analyzer": "^2.9.0",
+    "url-search-params-polyfill": "^2.0.3",
+    "webpack": "^3.10.0",
+    "webpack-bundle-analyzer": "^2.10.0",
     "webpack-dev-server": "2.7.1"
   },
   "lint-staged": {
@@ -160,6 +164,7 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
-    "moduleFileExtensions": ["web.js", "js", "json", "web.jsx", "jsx", "node"]
+    "moduleFileExtensions": ["web.js", "js", "json", "web.jsx", "jsx", "node"],
+    "setupTestFrameworkScriptFile": "<rootDir>/enzyme.config.js"
   }
 }
