--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "url-loader": "0.5.9",
     "uuid": "^3.2.1",
     "webpack-manifest-plugin": "1.2.1",
+    "xlsx": "^0.12.4",
     "yup": "^0.22.0"
   },
   "scripts": {
