--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@blueprintjs/core": "^2.1.1",
     "@blueprintjs/datetime": "^1.25.3",
     "@blueprintjs/labs": "^0.8.0",
+    "@types/react-transition-group": "^2.0.7",
     "autoprefixer": "7.1.2",
     "axios": "^0.16.2",
     "babel-core": "6.25.0",
@@ -63,6 +64,7 @@
     "react-router-dom": "^4.2.2",
     "react-select": "^1.2.1",
     "react-test-renderer": "^16.2.0",
+    "react-transition-group": "^2.3.0",
     "recompose": "^0.25.0",
     "redux": "^3.7.2",
     "redux-form": "^7.2.3",
